[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = true

[[bin]]
name = "04float"
path = "src/float-test/04float.rs"

[[bin]]
name = "05fpro"
path = "src/float-test/05fpro.rs"

# [features]
# board_qemu = []
# board_k210 = []
